Completed the portfolio page.

--- a/index.html
+++ b/index.html
@@ -499,6 +499,60 @@
             <li><a href="" class="current transition" data-filter="*">All</a></li>
             <li><a href="" class="transition" data-filter=".webdesign">Web Design</a></li>
             <li><a href="" class="transition" data-filter=".photography">Photography</a></li>
+            <li><a href="" class="transition" data-filter=".illustration">Illustration</a></li>
+            <li><a href="" class="transition" data-filter=".print">Print</a></li>
+            <li><a href="" class="transition" data-filter=".animation">Animation</a></li>
+          </ul>
+          <div class="extra-text">Some of the projects I am proud of.</div>
+          <ul id="portfolio-list">
+            <li class="illustration print">
+              <a href="" class="folio"><img src="img/work3.jpg" alt="">
+                <h2 class="title">Hello Goodbye</h2>
+                <span class="categorie">Print / Illustration</span>
+              </a>
+            </li>
+            <li class="webdesign">
+              <a href="" class="folio"><img src="img/3-thumb.jpg" alt="">
+                <h2 class="title">Snow Time</h2>
+                <span class="categorie">Web Design</span>
+              </a>
+            </li>
+            <li class="photography">
+              <a href="" class="folio"><img src="img/2-thumb.jpg" alt="">
+                <h2 class="title">Help Us</h2>
+                <span class="categorie">Photography</span>
+              </a>
+            </li>
+            <li class="animation print">
+              <a href="" class="folio"><img src="img/4-thumb.jpg" alt="">
+                <h2 class="title">Sunshine</h2>
+                <span class="categorie">Print / Animation</span>
+              </a>
+            </li>
+            <li class="animation">
+              <a href="" class="folio"><img src="img/5-thumb.jpg" alt="">
+                <h2 class="title">Come Together</h2>
+                <span class="categorie">Animation</span>
+              </a>
+            </li>
+            <li class="webdesign print">
+              <a href="" class="folio"><img src="img/6-thumb.jpg" alt="">
+                <h2 class="title">They Yellow</h2>
+                <span class="categorie">Print / Web Design</span>
+              </a>
+            </li>
+            <li class="illustration">
+              <a href="" class="folio"><img src="img/8-thumb.jpg" alt="">
+                <h2 class="title">Revolution</h2>
+                <span class="categorie">Illustration</span>
+              </a>
+            </li>
+            <li class="photography">
+              <a href="" class="folio"><img src="img/7-thumb.jpg" alt="">
+                <h2 class="title">Black Bird</h2>
+                <span class="categorie">Photography</span>
+              </a>
+            </li>
           </ul>
         </section>
         <section id="contact">
@@ -511,7 +565,7 @@
         </section>
       </section>
       <footer>
-        <div class="copyright">Copyright &copy; Greg Drake</div>
+        <div class="copyright">Copyright &copy; 2020 Greg Drake</div>
       </footer>
     </section>
     <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
